--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,101 @@
+<ActionBar title="Temas do NativeScript" class="action-bar"></ActionBar>
+
+<ScrollView>
+    <StackLayout class="page">
+        <Label text="Label com class h1" class="h1"></Label>
+        <Label text="Label com class h4" class="h4"></Label>
+
+        <Progress class="progress m-20" value="75"></Progress>
+        <ActivityIndicator class="activity-indicator" busy="true"></ActivityIndicator>
+
+        <Button text="Botão com class btn" class="btn"></Button>
+        <Button text="Botão com class btn btn-primary" class="btn btn-primary"></Button>
+        <Button text="Botão com class btn btn-outline" class="btn btn-outline"></Button>
+
+        <StackLayout class="form m-t-30 m-b-30">
+            <StackLayout class="input-field">
+                <Label text="Nome" class="label font-weight-bold m-b-5"></Label>
+                <TextField class="input"></TextField>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
+
+            <StackLayout class="input-field">
+                <Label text="Email" class="label font-weight-bold m-b-5"></Label>
+                <TextField class="input"></TextField>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
+        </StackLayout>
+
+        <StackLayout class="hr-light"></StackLayout>
+
+        <Label text="Label com class body" class="body"></Label>
+        <Label text="Label com class footnote" class="footnote"></Label>
+        <Label text="Label com class body e text-center" class="body text-center"></Label>
+        <Label text="Label com class body e font-italic" class="body font-italic"></Label>
+
+
+        <Label text="Label com class body e m-l-20" class="body m-l-20"></Label>
+
+        <StackLayout class="hr-dark"></StackLayout>
+        <Label text="Label com class text-primary" class="text-primary"></Label>
+        <Label text="Label com class text-muted" class="text-muted"></Label>
+        <Label text="Label com class text-danger" class="text-danger"></Label>
+
+        <StackLayout class="hr-dark"></StackLayout>
+
+        <StackLayout class="bg-primary">
+            <Label text="I want to draw your attention here."></Label>
+        </StackLayout>
+        <StackLayout class="bg-danger">
+            <Label text="A critical error has occurred!"></Label>
+        </StackLayout>
+    </StackLayout>
+</ScrollView>
+
+<!--
+<WrapLayout orientation="horizontal" itemWidth="100" itemHeight="100" width="200" height="200" backgroundColor="lightgray">
+    <Label text="Label 1" width="250" height="70" backgroundColor="red"></Label>
+    <Label text="Label 2" width="70" height="70" backgroundColor="green"></Label>
+    <Label text="Label 3" width="70" height="70" backgroundColor="blue"></Label>
+    <Label text="Label 4" width="70" height="70" backgroundColor="yellow"></Label>
+</WrapLayout>
+-->
+
+
+<!--<StackLayout>
+    <Label text="Label 1" marginTop="20" backgroundColor="red"></Label>
+    <Label text="Label 2" marginBottom="15" marginTop="50" backgroundColor="blue"></Label>
+    <Button text="Botão"></Button>
+</StackLayout>-->
+
+
+<!--<GridLayout columns="70, auto, *" rows="50, auto, *" backgroundColor="lightgray">
+    <Label text="Label 1" row="0" col="0" backgroundColor="red"></Label>
+    <Label text="Label 2" row="0" col="1" backgroundColor="blue"></Label>
+    <Label text="Label 3" row="0" col="2" backgroundColor="green"></Label>
+
+    <Label text="Label 1" row="1" col="0" backgroundColor="blue"></Label>
+    <Label text="Label 2" row="1" col="1" backgroundColor="green"></Label>
+    <Label text="Label 3" row="1" col="2" backgroundColor="blue"></Label>
+
+    <Label text="Label 1" row="2" col="0" backgroundColor="green"></Label>
+    <Label text="Label 2" row="2" col="1" backgroundColor="red"></Label>
+    <Label text="Label 3" row="2" col="2" backgroundColor="orange"></Label>
+</GridLayout>-->
+
+
+<!--<DockLayout backgroundColor="lightgray" stretchLastChild="false">
+    <Label text="left" dock="left" width="60" backgroundColor="red"></Label>
+    <Label text="top" dock="top" height="60" backgroundColor="green"></Label>
+    <Label text="right" dock="right" width="60" backgroundColor="blue"></Label>
+    <Label text="bottom" dock="bottom" backgroundColor="yellow"></Label>
+</DockLayout>-->
+
+
 <!-- https://docs.nativescript.org/angular/core-concepts/angular-navigation.html#page-router-outlet -->
-<page-router-outlet></page-router-outlet>
+<!--<page-router-outlet></page-router-outlet>-->
+<!--<AbsoluteLayout>
+    <Button top="50" left="100" text="Botão 1" backgroundColor="red"></Button>
+    <Button top="150" text="Eu sou um botão 2" backgroundColor="red" margin="30"></Button>
+</AbsoluteLayout>-->
+
