Adding sign-up page base

--- a/src/sign-in/sign-in.component.html
+++ b/src/sign-in/sign-in.component.html
@@ -14,5 +14,5 @@
         </StackLayout>
     </StackLayout>
 
-    <Button text="Botão de Login" class="btn btn-primary"></Button>
+    <Button text="Entrar" class="btn btn-primary"></Button>
 </StackLayout>
