--- a/src/sign-in/sign-in.component.html
+++ b/src/sign-in/sign-in.component.html
@@ -1,20 +1,24 @@
 <ActionBar title="Fazer Login" class="action-bar"></ActionBar>
+<ScrollView>
+    <StackLayout class="page">
 
-<StackLayout class="page">
+        <Image src="~/images/app_icon.png" stretch="false" horizontalAlignment="center" class="m-20"></Image>
 
-    <StackLayout class="form">
-        <StackLayout class="input-field">
-            <Label text="Email" class="label font-weight-bold m-b-5"></Label>
-            <TextField class="input" keyboardType="email" autocapitalizationType="none" autocorrect="false"></TextField>
-            <StackLayout class="hr-light"></StackLayout>
+        <StackLayout class="form">
+            <StackLayout class="input-field">
+                <Label text="Email" class="label font-weight-bold m-b-5"></Label>
+                <TextField class="input" keyboardType="email" autocapitalizationType="none"
+                           autocorrect="false"></TextField>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
+
+            <StackLayout class="input-field">
+                <Label text="Senha" class="label font-weight-bold m-b-5"></Label>
+                <TextField class="input" secure="true"></TextField>
+                <StackLayout class="hr-light"></StackLayout>
+            </StackLayout>
         </StackLayout>
 
-        <StackLayout class="input-field">
-            <Label text="Senha" class="label font-weight-bold m-b-5"></Label>
-            <TextField class="input" secure="true"></TextField>
-            <StackLayout class="hr-light"></StackLayout>
-        </StackLayout>
+        <Button text="Entrar" class="btn btn-primary"></Button>
     </StackLayout>
-
-    <Button text="Entrar" class="btn btn-primary"></Button>
-</StackLayout>
+</ScrollView>
