Adding navigation between SignInComponent and SignUpComponent

--- a/src/sign-in/sign-in.component.html
+++ b/src/sign-in/sign-in.component.html
@@ -20,6 +20,7 @@
             </StackLayout>
 
             <Button text="Entrar" class="btn btn-primary"></Button>
+            <Button text="Criar conta" nsRouterLink="/sign-up" pageTransition="slideLeft" class="btn btn-outline"></Button>
         </StackLayout>
 
     </StackLayout>
