--- a/src/sign-up/sign-up.component.html
+++ b/src/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="Criação de Conta" class="action-bar"></ActionBar>
+<ActionBar title="TaskManager - Criar Conta" class="action-bar"></ActionBar>
 
 <ScrollView>
     <StackLayout class="page">
@@ -30,5 +30,6 @@
         </StackLayout>
 
         <Button text="Criar conta" class="btn btn-primary"></Button>
+        <Button text="Login" nsRouterLink="/sign-in" pageTransition="slideRight" class="btn btn-outline"></Button>
     </StackLayout>
 </ScrollView>
