--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -8,6 +8,6 @@
         <Label class="h3" text="O que deseja fazer?"></Label>
 
         <Button class="btn btn-primary" text="Ver minhas tarefas"></Button>
-        <Button class="btn btn-outline" text="Sair"></Button>
+        <Button (tap)="signOutUser()" class="btn btn-outline" text="Sair"></Button>
     </StackLayout>
 </ScrollView>
