--- a/src/sign-in/sign-in.component.html
+++ b/src/sign-in/sign-in.component.html
@@ -2,24 +2,42 @@
 <ScrollView>
     <StackLayout class="page">
 
-        <StackLayout class="form">
+        <StackLayout [formGroup]="form" class="form">
 
             <Image src="~/images/app_icon.png" stretch="false" horizontalAlignment="center" class="m-20"></Image>
 
+            <!-- email -->
             <StackLayout class="input-field">
                 <Label text="Email" class="label font-weight-bold m-b-5"></Label>
-                <TextField class="input" keyboardType="email" autocapitalizationType="none"
+                <TextField formControlName="email" class="input" keyboardType="email" autocapitalizationType="none"
                            autocorrect="false"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
+
+                <StackLayout *ngIf="form.get('email').invalid && form.get('email').dirty">
+                    <Label class="text-right text-danger" *ngIf="form.get('email').errors.required" text="Campo obrigatório"></Label>
+                    <Label class="text-right text-danger" *ngIf="form.get('email').errors.email" text="E-mail inválido"></Label>
+                </StackLayout>
             </StackLayout>
 
+            <!-- password -->
             <StackLayout class="input-field">
                 <Label text="Senha" class="label font-weight-bold m-b-5"></Label>
-                <TextField class="input" secure="true"></TextField>
+                <TextField formControlName="password" class="input" secure="true"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
+
+                <StackLayout *ngIf="form.get('password').invalid && form.get('password').dirty">
+                    <Label class="text-right text-danger" *ngIf="form.get('password').errors.required" text="Campo obrigatório"></Label>
+                </StackLayout>
             </StackLayout>
 
-            <Button text="Entrar" class="btn btn-primary"></Button>
+            <!-- formErrors -->
+            <StackLayout *ngIf="formErrors" class="formErrors">
+                <Label class="font-weight-bold" text="Ocorreu um erro ao fazer login" textWrap="true"></Label>
+                <Label *ngFor="let error of formErrors" [text]="error" class="text-danger" textWrap="true"></Label>
+            </StackLayout>
+
+            <!-- buttons -->
+            <Button text="Entrar" class="btn btn-primary" [isEnabled]="form.valid && !submitted" (tap)="signInUser()"></Button>
             <Button text="Criar conta" nsRouterLink="/sign-up" pageTransition="slideLeft" class="btn btn-outline"></Button>
         </StackLayout>
 
