--- a/src/sign-up/sign-up.component.html
+++ b/src/sign-up/sign-up.component.html
@@ -60,6 +60,9 @@
                 <Label *ngFor="let error of formErrors" [text]="error" class="text-danger" textWrap="true"></Label>
             </StackLayout>
 
+            <!-- Activity Indicator -->
+            <ActivityIndicator [busy]="submitted" *ngIf="submitted" horizontalAlignment="center"></ActivityIndicator>
+
             <!-- buttons -->
             <Button text="Criar conta" class="btn btn-primary" [isEnabled]="form.valid && !submitted" (tap)="signUpUser()"></Button>
             <Button text="Login" nsRouterLink="/sign-in" pageTransition="slideRight" class="btn btn-outline"></Button>
