--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -7,7 +7,7 @@
         <Label text="Bem Vindo" class="h2 m-t-30"></Label>
         <Label class="h3" text="O que deseja fazer?"></Label>
 
-        <Button class="btn btn-primary" text="Ver minhas tarefas"></Button>
+        <Button nsRouterLink="/tasks" class="btn btn-primary" text="Ver minhas tarefas"></Button>
         <Button (tap)="signOutUser()" class="btn btn-outline" text="Sair"></Button>
     </StackLayout>
 </ScrollView>
