Adding GridLayout to Tasks view

--- a/src/tasks/tasks.component.html
+++ b/src/tasks/tasks.component.html
@@ -1,1 +1,8 @@
 <ActionBar class="action-bar" title="TaskManager - Tarefas"></ActionBar>
+
+<GridLayout class="page" rows="auto, *">
+    <GridLayout row="0" columns="*, auto" class="form">
+        <TextField class="input" col="0" hint="Digite uma tarefa"></TextField>
+        <Label col="1" text="(+)"></Label>
+    </GridLayout>
+</GridLayout>
