--- a/src/tasks/tasks.component.html
+++ b/src/tasks/tasks.component.html
@@ -5,4 +5,14 @@
         <TextField class="input" col="0" hint="Digite uma tarefa"></TextField>
         <Label col="1" text="(+)"></Label>
     </GridLayout>
+
+    <ListView row="1" class="list-group" [items]="tasks">
+        <ng-template let-task="item">
+            <GridLayout class="list-group-item" columns="35px, *, auto">
+                <Label col="0" [text]="task.done ? '[x]' : '[ ]'"></Label>
+                <Label col="1" [text]="task.title"></Label>
+                <Label col="2" text="(-)"></Label>
+            </GridLayout>
+        </ng-template>
+    </ListView>
 </GridLayout>
