--- a/src/tasks/tasks.component.html
+++ b/src/tasks/tasks.component.html
@@ -3,15 +3,15 @@
 <GridLayout class="page" rows="auto, *">
     <GridLayout row="0" columns="*, auto" class="form">
         <TextField class="input" col="0" hint="Digite uma tarefa"></TextField>
-        <Label col="1" text="(+)"></Label>
+        <Label col="1" [text]="icons.get('add')" class="fa"></Label>
     </GridLayout>
 
     <ListView row="1" class="list-group" [items]="tasks">
         <ng-template let-task="item">
             <GridLayout class="list-group-item" columns="35px, *, auto">
-                <Label col="0" [text]="task.done ? '[x]' : '[ ]'"></Label>
+                <Label col="0" [text]="checkboxIcon(task)" class="fa"></Label>
                 <Label col="1" [text]="task.title"></Label>
-                <Label col="2" text="(-)"></Label>
+                <Label col="2" class="fa" [text]="icons.get('trash')"></Label>
             </GridLayout>
         </ng-template>
     </ListView>
