--- a/src/tasks/tasks.component.html
+++ b/src/tasks/tasks.component.html
@@ -2,16 +2,16 @@
 
 <GridLayout class="page" rows="auto, *">
     <GridLayout row="0" columns="*, auto" class="form">
-        <TextField class="input" col="0" hint="Digite uma tarefa"></TextField>
-        <Label col="1" [text]="icons.get('add')" class="fa"></Label>
+        <TextField class="input" col="0" hint="Digite uma tarefa" [(ngModel)]="newTask.title" (returnPress)="createTask()"></TextField>
+        <Label col="1" [text]="icons.get('add')" class="fa" (tap)="createTask()"></Label>
     </GridLayout>
 
     <ListView row="1" class="list-group" [items]="tasks">
         <ng-template let-task="item">
             <GridLayout class="list-group-item" columns="35px, *, auto">
-                <Label col="0" [text]="checkboxIcon(task)" class="fa"></Label>
+                <Label col="0" [text]="checkboxIcon(task)" class="fa" (tap)="taskDone(task)"></Label>
                 <Label col="1" [class.done-task]="task.done" [text]="task.title" class="list-group-item-text"></Label>
-                <Label col="2" class="fa" [text]="icons.get('trash')"></Label>
+                <Label col="2" class="fa" [text]="icons.get('trash')" (tap)="deleteTask(task)"></Label>
             </GridLayout>
         </ng-template>
     </ListView>
