Calling DateTimePickerModal inside TaskDetailComponent

--- a/src/datetime-picker-modal/datetime-picker-modal.component.html
+++ b/src/datetime-picker-modal/datetime-picker-modal.component.html
@@ -1,6 +1,8 @@
-<StackLayout>
-    <DatePicker id="datePicker"></DatePicker>
-    <TimePicker id="timePicker"></TimePicker>
+<ScrollView>
+    <StackLayout>
+        <DatePicker id="datePicker"></DatePicker>
+        <TimePicker id="timePicker"></TimePicker>
 
-    <Button class="btn btn-primary" text="OK"></Button>
-</StackLayout>
+        <Button class="btn btn-primary" text="OK"></Button>
+    </StackLayout>
+</ScrollView>
