--- a/src/tasks/task-detail/task-detail.component.html
+++ b/src/tasks/task-detail/task-detail.component.html
@@ -17,17 +17,17 @@
                 </StackLayout>
             </StackLayout>
 
-            <!-- descriptiom -->
+            <!-- description -->
             <StackLayout class="input-field">
                 <Label text="Descrição" class="label font-weight-bold m-b-5"></Label>
-                <TextField formControlName="descriptiom" class="input"></TextField>
+                <TextField formControlName="description" class="input"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
 
             <!-- deadline -->
             <StackLayout class="input-field">
                 <Label text="Prazo de Entrega" class="label font-weight-bold m-b-5"></Label>
-                <TextField formControlName="deadline" class="input" editable="false"></TextField>
+                <TextField formControlName="deadline" class="input" editable="false" (tap)="showDateTimePickerModal()"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
 
