--- a/src/tasks/tasks.component.html
+++ b/src/tasks/tasks.component.html
@@ -1,4 +1,8 @@
-<ActionBar class="action-bar" title="TaskManager - Tarefas"></ActionBar>
+<ActionBar class="action-bar" title="TaskManager - Tarefas">
+    <ActionItem ios.position="right">
+        <Label [text]="icons.get('social-share')" class="fa" (tap)="shareTasks()"></Label>
+    </ActionItem>
+</ActionBar>
 
 <GridLayout class="page" rows="auto, *">
     <GridLayout row="0" columns="*, auto" class="form">
